# typechain-compiler-example

./: .gitignore  index.ts  package-lock.json  package.json  tsconfig.json  typechain.config.json
artifacts/: flipper.contract  flipper.json  my_psp22.contract  my_psp22.json
contracts/psp22/: Cargo.toml  lib.rs
typechain-generated/build-extrinsic/: my_psp22.ts
typechain-generated/constructors/: my_psp22.ts
typechain-generated/data/: my_psp22.json
typechain-generated/mixed-methods/: my_psp22.ts
typechain-generated/query/: my_psp22.ts
typechain-generated/tx-sign-and-send/: my_psp22.ts
